@@ -570,6 +570,7 @@ KEPCHUP_PAYMENT_METHOD = "wire_transfer"
 KEPCHUP_USE_DIFFERENTIATED_PRICES = False
 KEPCHUP_LOCAL_ZIPCODES = []
 KEPCHUP_SEND_BILL_TO_ACCOUNTANT = False
+KEPCHUP_ALTERNATIVE_PAYMENT_METHODS_FROM_BACKEND = []
 
 # Registration steps
 #
